Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

23-Mar-2013 Jean-Marie Simonet
 # [#30361] Chosen minified and un-minified versions are different. Thanks Roberto
 # [#30348] Popular Tags Module showing multiple copies of links. Thanks Elin

22-Mar-2013 Jean-Marie Simonet
 $ Updating Installation ini files: he-IL, nl-NL

21-Mar-2013 Michael Babker
 ^ [#30319] Accessibility fixes to JForm Platform Synch.  Thanks Elin
 ^ [#30353] Clean up left over debugging.  Thanks Elin

21-Mar-2013 Jean-Marie Simonet
 # [#30340] Fix regression in Similar Tags Module. Thanks Elin
 $ Duplicate lang string +
 # [#30320] *Deleted Tagged items are not deleted from the map table and core_content table. Thanks Elin
 # [#30346] *Contact creator does not include default language "All" for the contact created
 # [#30330] *Correcting alignment of metadata labels in Category edit
 # [#30339] Component Update Info URL - open in new tab. Thanks Glen

-------------------- 3.1 Beta 2 Release [20-Mar-2012] ------------------

20-Mar-2013 Mark Dexter
 # [#30326] Cannot add position in Module Manager. Thanks Roberto Segura.
 # [#30314] Move to new JFeed. Thanks Elin.
 # [#29520] Cannot add new menu item. [qlsrv]. Thanks Cliff Galiher.

20-Mar-2013 Jean-Marie Simonet
 # [#30333] *TAGS: Notice when entering 2 tags in a tags menu item. Thanks Roberto
 # [#30328] AJAX field improvements/fixes. Thanks Roberto
 # [#30304] Cant add fields to the category form using a plugin. Thanks all.
 # [#29734] Joomla Newsfeed problem. Thanks Tessa
 # [#30327] PHP Notice using new layouts (from pull request 814). Thanks Elin.

19-Mar-2013 Jean-Marie Simonet
 $ Missing strings in com_tags frontend

18-Mar-2013 Jean-Marie Simonet
 # [#26860] A Contact name *must not* be unique. Thanks Christophe and Janich
 # [#28874] Registration activation email links. Thanks Marco