@@ -82,6 +82,21 @@ abstract class ModTagssimilarHelper
 				$query->having('COUNT( '  . $db->qn('tag_id') . ')  >= ' . $tagCountHalf);
 			}
 
+			// Only return published tags
+			$query->where($db->quoteName('cc.core_state') . ' = 1 ');
+
+			// Optionally filter on language
+			$language = JComponentHelper::getParams('com_tags')->get('tag_list_language_filter', 'all');
+
+			if ($language != 'all')
+			{
+				if ($language == 'current_language')
+				{
+					$language = JHelperContent::getCurrentLanguage();
+				}
+				$query->where($db->qn('cc.core_language') . ' IN (' . $db->q($language) . ', ' . $db->q('*') . ')');
+			}
+
 			$query->join('INNER', $db->qn('#__tags', 't') . ' ON ' . $db->qn('m.tag_id') . ' = ' . $db->qn('t.id'));
 			$query->join('INNER', $db->qn('#__core_content', 'cc') . ' ON ' . $db->qn('m.core_content_id') . ' = ' . $db->qn('cc.core_content_id'));
 
